--- a/webapproot/pages/Main/Main.css
+++ b/webapproot/pages/Main/Main.css
@@ -41,3 +41,9 @@
     color: #fff;
     border: 0px !important;    
 }
+
+#main_breadcrumbLayers1_decorator_button5{
+    background-color: #4DBD33;
+    color: #fff;
+    border: 0px !important;    
+}
